deploy/01.zdb-system-create-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cloudzdb.io/zdb-system: "true"
  name: zdb-system
