deploy/02.zdb-system-mariadb-install.yaml
---
# Source: mariadb/templates/master-svc-public.yaml

#apiVersion: v1
#kind: Service
#metadata:
#  name: "zdb-system-zdb-mariadb-public"
#  labels:
#    app: "mariadb"
#    component: "master"
#    chart: mariadb-4.2.0
#    release: "zdb-system-zdb"
#    heritage: "Tiller"
#  annotations:
#    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: public
#spec:
#  type: LoadBalancer
#  ports:
#  - name: mysql
#    port: 3306
#    targetPort: mysql
#  selector:
#    app: "mariadb"
#    component: "master"
#    release: "zdb-system-zdb"
#
#---
# Source: mariadb/templates/master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zdb-system-zdb-mariadb
  labels:
    app: "mariadb"
    component: "master"
    chart: mariadb-4.2.0
    release: "zdb-system-zdb"
    heritage: "Tiller"
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: private
    
    prometheus.io/port: "9104"
    prometheus.io/scrape: "true"
    
spec:
  type: LoadBalancer
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
  - name: metrics
    port: 9104
    targetPort: metrics
  selector:
    app: "mariadb"
    component: "master"
    release: "zdb-system-zdb"

---
# Source: mariadb/templates/test-runner.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "zdb-system-zdb-mariadb-test-4fkky"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: mariadb-test
      image: "docker.io/bitnami/mariadb:10.2.14"
      imagePullPolicy: "IfNotPresent"
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
      - mountPath: /tests
        name: tests
        readOnly: true
      - mountPath: /tools
        name: tools
  volumes:
  - name: tests
    configMap:
      name: zdb-system-zdb-mariadb-tests
  - name: tools
    emptyDir: {}
  restartPolicy: Never

---
# Source: mariadb/templates/master-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: zdb-system-zdb-mariadb
  labels:
    app: "mariadb"
    chart: mariadb-4.2.0
    component: "master"
    release: "zdb-system-zdb"
    heritage: "Tiller"
spec:
  serviceName: "zdb-system-zdb-mariadb"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: "mariadb"
        component: "master"
        release: "zdb-system-zdb"
        billingType: "hourly"
    spec:   
      securityContext:
        runAsUser: 0
        fsGroup: 0
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: "mariadb"
                  release: "zdb-system-zdb"
      containers:
      - name: "mariadb"
        image: docker.io/bitnami/mariadb:10.2.14
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: mysql
          containerPort: 3306
        livenessProbe:
          exec:
            command: ["sh", "-c", "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD"]
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command: ["sh", "-c", "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD"]
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 512Mi
          
        volumeMounts:
        - name: data
          mountPath: /bitnami/mariadb
        - name: config
          mountPath: /opt/bitnami/mariadb/conf/my.cnf
          subPath: my.cnf
      - name: metrics
        image: docker.io/prom/mysqld-exporter:v0.10.0
        imagePullPolicy: "IfNotPresent"
        command: [ 'sh', '-c', 'DATA_SOURCE_NAME="root:$MARIADB_ROOT_PASSWORD@(localhost:3306)/" /bin/mysqld_exporter' ]
        ports:
        - name: metrics
          containerPort: 9104
        livenessProbe:
          httpGet:
            path: /metrics
            port: metrics
          initialDelaySeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /metrics
            port: metrics
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          {}
          
      volumes:
        - name: config
          configMap:
            name: zdb-system-zdb-mariadb
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: "mariadb"
          chart: mariadb-4.2.0
          component: "master"
          release: "zdb-system-zdb"
          heritage: "Tiller"
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "20Gi"
        storageClassName: "ibmc-block-silver"
