deploy/04.zdb-system-zdb-portal-app.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: zdb-portal-server-deployment
  namespace: zdb-system
  labels:
    app: zdb-portal-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zdb-portal-server
  template:
    metadata:
      labels:
        app: zdb-portal-server
    spec:
      containers:
      - name: zdb-portal-server
        image: cloudzcp/zdb-portal-server
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
      - env:
        - name: master.url
          valueFrom:
            configMapKeyRef:
              key: master.url
              name: zdb-portal-server-config
        - name: zdb.backup.agent.url
          valueFrom:
            configMapKeyRef:
              key: zdb.backup.agent.url
              name: zdb-portal-server-config
        - name: chart.redis.url
          valueFrom:
            configMapKeyRef:
              key: chart.redis.url
              name: zdb-portal-server-config
        - name: chart.mariadb.url
          valueFrom:
            configMapKeyRef:
              key: chart.mariadb.url
              name: zdb-portal-server-config
        - name: datasource.url
          valueFrom:
            configMapKeyRef:
              key: datasource.url
              name: zdb-portal-server-config
        - name: iam.baseUrl
          valueFrom:
            configMapKeyRef:
              key: iam.baseUrl
              name: zdb-portal-server-config
        - name: storage.class
          valueFrom:
            configMapKeyRef:
              key: storage.class
              name: zdb-portal-server-config              
      imagePullSecrets:
      - name: zdb-system-secret
      serviceAccountName: zdb-system-account
      automountServiceAccountToken: true
  
---
apiVersion: v1
kind: Service
metadata:
  name: zdb-portal-server-loadbalancer
  namespace: zdb-system
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: private
spec:
  type: LoadBalancer
  selector:
     app: zdb-portal-server
  ports:
   - protocol: TCP
     port: 8080
          
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: zdb-portal-ui
  name: zdb-portal-ui-deployment
  namespace: zdb-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: zdb-portal-ui
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: zdb-portal-ui
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: SPRING_ACTIVE_PROFILE
          valueFrom:
            configMapKeyRef:
              key: cluster
              name: zdb-portal-server-config
        - name: cluster
          valueFrom:
            configMapKeyRef:
              key: cluster
              name: zdb-portal-server-config
        - name: grafana.url
          valueFrom:
            configMapKeyRef:
              key: grafana.url
              name: zdb-portal-server-config          
        - name: iam.baseUrl
          valueFrom:
            configMapKeyRef:
              key: iam.baseUrl
              name: zdb-portal-server-config
        - name: zdb.portal.server.url
          valueFrom:
            configMapKeyRef:
              key: zdb.portal.server.url
              name: zdb-portal-server-config
        - name: zcp.access.token.url
          valueFrom:
            configMapKeyRef:
              key: zcp.access.token.url
              name: zdb-portal-server-config
        - name: zcp.client.secret
          valueFrom:
            configMapKeyRef:
              key: zcp.client.secret
              name: zdb-portal-server-config
        - name: zcp.redirect.url
          valueFrom:
            configMapKeyRef:
              key: zcp.redirect.url
              name: zdb-portal-server-config
        - name: zcp.user.auth.url
          valueFrom:
            configMapKeyRef:
              key: zcp.user.auth.url
              name: zdb-portal-server-config
        - name: zdb.backup.agent.url
          valueFrom:
            configMapKeyRef:
              key: zdb.backup.agent.url
              name: zdb-portal-server-config  
        image: cloudzcp/zdb-portal-ui
        imagePullPolicy: Always
        name: zdb-portal-ui
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: zdb-system-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: zdb-system-account
      serviceAccountName: zdb-system-account
      terminationGracePeriodSeconds: 30
      
---
apiVersion: v1
kind: Service
metadata:
  name: zdb-portal-ui-loadbalancer
  namespace: zdb-system
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: private
spec:
  type: LoadBalancer
  selector:
     app: zdb-portal-ui
  ports:
   - protocol: TCP
     port: 8080
     
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: zdb-backup-agent
  name: zdb-backup-agent-deployment
  namespace: zdb-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: zdb-backup-agent
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: zdb-backup-agent
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: datasource.url
          valueFrom:
            configMapKeyRef:
              key: datasource.url
              name: zdb-portal-server-config
        - name: master.url
          valueFrom:
            configMapKeyRef:
              key: master.url
              name: zdb-portal-server-config
        - name: zdb.backup.agent.url
          valueFrom:
            configMapKeyRef:
              key: zdb.backup.agent.url
              name: zdb-portal-server-config                            
        image: cloudzcp/zdb-backup-agent
        imagePullPolicy: Always
        name: zdb-backup-agent
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: zdb-system-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: zdb-system-account
      serviceAccountName: zdb-system-account
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: private
  name: zdb-agent-loadbalancer
  namespace: zdb-system
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: zdb-backup-agent
  sessionAffinity: None
  type: LoadBalancer
