deploy/heapster-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
    # For use as a Cluster add-on (https://github.com/kubernetes/kubernetes/tree/master/cluster/addons)
    # If you are NOT using this as an addon, you should comment out this line.
    kubernetes.io/cluster-service: 'true'
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: Heapster
  name: heapster-public
  namespace: kube-system
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: public
spec:
  ports:
  - port: 80
    targetPort: 8082
  selector:
    k8s-app: heapster
  type: LoadBalancer
