deploy/zdb-api-loadbalancer.yml
{
  "kind": "Service",
  "apiVersion": "v1",
  "metadata": {
    "name": "zdb-api-loadbalancer",
    "namespace": "zdb",
    "annotations": {
      "service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type": "private"
    }
  },
  "spec": {
    "ports": [
      {
        "protocol": "TCP",
        "port": 8080,
        "targetPort": 8080
      }
    ],
    "selector": {
      "app": "zdb-rest-api"
    },
    "type": "LoadBalancer"
  }
}
