deploy/zdb-dev-db.yaml
{
  "kind": "Service",
  "apiVersion": "v1",
  "metadata": {
    "name": "zdb-dev-db2-mariadb",
    "namespace": "zdb",
    "labels": {
      "app": "mariadb",
      "chart": "mariadb-4.1.2",
      "component": "master",
      "heritage": "Tiller",
      "release": "zdb-dev-db2"
    },
    "annotations": {
      "prometheus.io/port": "9104",
      "prometheus.io/scrape": "true"
    }
  },
  "spec": {
    "ports": [
      {
        "name": "mysql",
        "protocol": "TCP",
        "port": 3306
      },
      {
        "name": "metrics",
        "protocol": "TCP",
        "port": 9104
      }
    ],
    "selector": {
      "app": "mariadb",
      "component": "master",
      "release": "zdb-dev-db2"
    },
    "clusterIP": "172.21.216.17",
    "type": "LoadBalancer",
    "sessionAffinity": "None",
    "externalTrafficPolicy": "Cluster"
  }
}
