deploy/zdb-dev-helm-repo-service.yaml
{
  "kind": "Service",
  "apiVersion": "v1",
  "metadata": {
    "name": "zdb-helm-repo-public",
    "namespace": "zdb",
    "annotations": {
      "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type\":\"public\"},\"name\":\"zdb-helm-repo-public\",\"namespace\":\"zdb\",\"resourceVersion\":\"411087\",\"selfLink\":\"/api/v1/namespaces/zdb/services/zdb-helm-repo-mariadb-loadbalancer\"},\"spec\":{\"externalTrafficPolicy\":\"Cluster\",\"loadBalancerIP\":\"\",\"ports\":[{\"port\":80,\"protocol\":\"TCP\ [...]
      "service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type": "public"
    }
  },
  "spec": {
    "ports": [
      {
        "protocol": "TCP",
        "port": 80
      }
    ],
    "selector": {
      "app": "helm-repo-mariadb"
    },
    "type": "LoadBalancer",
    "sessionAffinity": "None",
    "externalTrafficPolicy": "Cluster"
  }
}
