deploy/zdb-system-deployment.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: zdb-portal-server-deployment
  namespace: zdb-system
  labels:
    app: zdb-portal-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zdb-portal-server
  template:
    metadata:
      labels:
        app: zdb-portal-server
    spec:
      containers:
      - name: zdb-portal-server
        image: registry.au-syd.bluemix.net/zdb-dev/zdb-portal-server:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
      imagePullSecrets:
      - name: zdb-system-secret
      serviceAccountName: zdb-system-account
      automountServiceAccountToken: true
  
---
apiVersion: v1
kind: Service
metadata:
  name: zdb-portal-server-loadbalancer
  namespace: zdb-system
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: private
spec:
  type: LoadBalancer
  selector:
     app: zdb-portal-server
  ports:
   - protocol: TCP
     port: 8080
