deploy/05.zdb-system-zdb-portal-app-ingresses.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zdb-portal-ui-ingress
  namespace: zdb-system
spec:
  rules:
  - host: console.zmon-dev.seo01.containers.appdomain.cloud
    http:
      paths:
      - backend:
          serviceName: zdb-portal-ui-service
          servicePort: 8080
        path: /
#  tls:
#  - hosts:
#    - console.zmon-dev.seo01.containers.appdomain.cloud
#    secretName: cloudzcp-io-cert
     
     
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zdb-backup-agent-ingress
  namespace: zdb-system
spec:
  rules:
  - host: agent.zmon-dev.seo01.containers.appdomain.cloud
    http:
      paths:
      - backend:
          serviceName: zdb-backup-agent-loadbalancer
          servicePort: 8080
        path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zdb-portal-server-ingress
  namespace: zdb-system
spec:
  rules:
  - host: api.zmon-dev.seo01.containers.appdomain.cloud
    http:
      paths:
      - backend:
          serviceName: zdb-portal-server-loadbalancer
          servicePort: 8080
        path: /
