deploy/zdb-api-ingress.yaml
{
  "kind": "Ingress",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "zdb-api-ingress",
    "namespace": "zdb-system"
  },
  "spec": {
    "rules": [
      {
        "host": "api.zdb-dev.jp-tok.containers.mybluemix.net",
        "http": {
          "paths": [
            {
              "path": "/",
              "backend": {
                "serviceName": "zdb-api-loadbalancer",
                "servicePort": 8080
              }
            }
          ]
        }
      }
    ]
  }
}
